--- a/src/app/pages/supertopup/quotes/quotes.scss
+++ b/src/app/pages/supertopup/quotes/quotes.scss
@@ -97,7 +97,7 @@
   object-fit: contain;
   display: block;
   /* helps white logos (like Bajaj) become visible */
-  filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.18));
+  // filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.18));
 }
 
 .cmp-company-name {
